<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="application_name">FEC</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>

    <string name="map">Map</string>
    <string name="tasks">Tasks</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_login">FEC</string>
    <string name="title_activity_task_details">Details</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="taskState">State:</string>
    <string name="taskDescription">Description:</string>
    <string name="taskName"></string>
    <string name="requestBackupButton">Request backup</string>
    <string name="backupRequestedAt">Backup requested at: </string>


    <string-array name="task_states">
        <item>OPEN</item>
        <item>IN_PROGRESS</item>
        <item>FINISHED</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
